<resources>
    <string name="px_card_association_result_success_text">Done! Your card has been saved</string>
    <string name="px_card_association_result_go_back_button_text">Go to My Cards</string>
    <string name="px_card_association_result_error_icon_text">Something went wrong…</string>
    <string name="px_card_association_result_error_text">We couldn\'t load your card details</string>
    <string name="px_card_association_result_error_retry_button_text">Try again</string>
    <string name="px_amount_with_installments_holder">%1$sx %2$s</string>
    <string name="px_total_amount_holder" translatable="false">(%1$s)</string>
    <string name="px_string_holder" translatable="false">%1$s</string>
    <string name="px_payment_detail_title_modal">Detail</string>
    <string name="px_quantity_modal" translatable="false">%1$d %2$s</string>
    <string name="px_processing_payment_button">Processing your payment</string>
    <string name="px_summary_detail_item_description">Your purchase</string>
    <string name="px_total_in_mercado_pago">Total in Mercado Pago: %1$s</string>
    <string name="px_pay">Pay</string>
    <string name="px_prefix_discount_amount" translatable="false">- %1$s</string>
    <string name="px_empty_bank_deals">No promotions available for you</string>
    <string name="px_bank">bank</string>
    <string name="px_title_activity_bank_deals">Promotions</string>
    <string name="bank_deal_details_title">Conditions</string>
    <string name="bank_deal_details_date_format">Up to %s</string>
    <string name="px_title_activity_payment_methods">How do you want to %1$s?</string>
    <string name="px_main_verb">pay</string>
    <string name="px_last_digits_label">Ending in</string>
    <string name="px_confirm">Confirm</string>
    <string name="px_title_activity_payment_vault">How do you want to %1$s?</string>
    <string name="px_no_payment_methods_found">There are no available payment methods</string>
    <string name="px_card_issuers_title">Which is your bank?</string>
    <string name="px_card_installments_title">How many installments?</string>
    <string name="px_select_installments_title">Select the installment plan</string>
    <string name="px_installments_by" translatable="false">x</string>
    <string name="px_installments_cft" translatable="false">CFT: %1$s</string>
    <string name="px_payer_information_identification_type_and_number" translatable="false">%1$s: %2$s</string>
    <string name="px_payer_information_first_and_last_name" translatable="false">%1$s %2$s</string>
    <string name="px_payer_information_modify">Modify</string>
    <string name="px_terms_and_conditions_message">By paying, I claim to be an adult and that I accept the</string>
    <string name="px_terms_and_conditions_linked_message">Terms and conditions.</string>
    <string name="px_terms_and_conditions">Terms and conditions</string>
    <string name="px_discount_terms_and_conditions_message">Mercado Libre and Mercado Pago\'s exclusive discount.</string>
    <string name="px_discount_terms_and_conditions_linked_message">See conditions</string>
    <string name="px_invalid_card_number_incomplete">Enter all the numbers of the card</string>
    <string name="px_invalid_empty_name">Enter the name and last name printed on the card</string>
    <string name="px_invalid_expiry_date">The date you entered is not valid</string>
    <string name="px_invalid_identification_number">Enter all numbers</string>
    <string name="px_invalid_identification_name">Enter your name</string>
    <string name="px_invalid_identification_last_name">Enter your last name</string>
    <string name="px_invalid_payment_method">You can\'t pay with this payment method</string>
    <string name="px_card_number_label">Card number</string>
    <string name="px_card_expire_date_label">Expiration date</string>
    <string name="px_cardholder_name">Name and surname</string>
    <string name="px_name">Name</string>
    <string name="px_lastname">Surname</string>
    <string name="px_bank_deals_action">See deals</string>
    <string name="px_security_code">Security code</string>
    <string name="px_continue_label">Continue</string>
    <string name="px_invalid_card_bin">The card number you entered does not match with the card type</string>
    <string name="px_invalid_card_luhn">The card number you entered is incorrect</string>
    <string name="px_invalid_card_length">Enter the %1$s card numbers</string>
    <string name="px_invalid_cvv_length">Enter the %1$s security code numbers</string>
    <string name="px_invalid_field">Check this information</string>
    <string name="px_invalid_empty_card">Enter the credit card number</string>
    <string name="px_card_expiry_month_hint">MM</string>
    <string name="px_card_expiry_divider_hint">/</string>
    <string name="px_card_expiry_year_hint">YY</string>
    <string name="px_card_identification_label">CARD HOLDER DOCUMENT</string>
    <string name="px_ticket_identification_label">DATA TO VALIDATE YOUR PAYMENT</string>
    <string name="px_name_and_lastname_identification_label">NAME AND SURNAME</string>
    <string name="px_card_identification_number">Number</string>
    <string name="px_card_identification_type">Type</string>
    <string name="px_identification_card_holder_hint" translatable="false">•• ••• •••</string>
    <string name="px_cardholder_name_short">NAME SURNAME</string>
    <string name="px_more_info">MORE INFO</string>
    <string name="px_try_other_card">Enter card</string>
    <string name="px_you_can_finish_your_payment_with_cards">Don\'t worry, you can still pay with:</string>
    <string name="px_invalid_card_payment_method">Credit card not supported</string>
    <string name="px_exclusion_one_element">You can only pay with %1$s</string>
    <string name="px_title_approved_payment">Done! Your payment was accredited</string>
    <string name="px_text_state_account_activity_congrats">On your statement you will see the charge as\n %s</string>
    <string name="px_ending_in">ending in</string>
    <string name="px_receipt">Transaction number %1$s</string>
    <string name="px_date_divider">of</string>
    <string name="px_copied_to_clipboard_ack">Done! Copied.</string>
    <string name="px_title_activity_call_for_authorize">You must authorize with %1$s the payment of %2$s to Mercado Pago</string>
    <string name="px_text_authorized_call_for_authorize">Already talked with %1$s and I am authorized</string>
    <string name="px_title_pending_payment">We are processing the payment</string>
    <string name="px_error_description_contingency">In a few hours we will notify you via e-mail if it is accredited.</string>
    <string name="px_error_description_review_manual">Within the next 24 hours we will notify you via e-mail if it was accredited.</string>
    <string name="px_pending_label">Hurry to pay!</string>
    <string name="px_text_pay_with_other_method">Change payment method</string>
    <string name="px_text_enter_again">Enter again</string>
    <string name="px_title_other_reason_rejection">%1$s did not process the payment</string>
    <string name="px_title_bad_filled_other">Oops, we could not process your payment</string>
    <string name="px_text_some_card_data_is_incorrect">Any datum of your %1$s is incorrect</string>
    <string name="px_text_insufficient_amount">Yours %1$s has insufficient funds</string>
    <string name="px_text_active_card">Calls to %1$s for activate your card</string>
    <string name="px_title_rejection_high_risk">For security reasons, we had to reject your payment</string>
    <string name="px_title_rejection_max_attempts">You reached the limit of attempts allowed</string>
    <string name="px_rejection_label">Something went wrong…</string>
    <string name="px_error_secondary_title_call">Could not authorize it?</string>
    <string name="px_error_description_call">The phone number is on the back of your card.</string>
    <string name="px_error_description_card_disabled">Use another payment method or call %1$s to activate your card.</string>
    <string name="px_error_description_insufficient_amount">Do not be discouraged! Recharge it in any bank or from your internet banking and try again.</string>
    <string name="px_error_description_second_insufficient_amount">Or if you prefer, you can choose another payment method.</string>
    <string name="px_error_description_other_reason">Use another card or other payment method.</string>
    <string name="px_error_description_by_bank">Please try to pay with other payment method.</string>
    <string name="px_error_description_insufficient_data">Please try to pay with other payment method.</string>
    <string name="px_error_description_duplicated_payment">Don\'t worry, your previous payment was approved.</string>
    <string name="px_error_description_max_attempts">As you reached the limit of attempts with this card, use another payment method.</string>
    <string name="px_error_description_high_risk">Use a payment method other than a card.</string>
    <string name="px_text_card_data_invalid">Review card data</string>
    <string name="px_text_card_enabled">I already enabled my card</string>
    <string name="px_error_message_invalid_item">Invalid item</string>
    <string name="px_error_message_expired_preference">Expired preference</string>
    <string name="px_error_message_inactive_preference">Inactive preference</string>
    <string name="px_error_message_invalid_default_installments">Invalid installments number by default</string>
    <string name="px_error_message_invalid_max_installments">Invalid max installments number</string>
    <string name="px_error_message_excluded_all_payment_type">All payments types excluded</string>
    <string name="px_error_message_invalid_installments">Invalid installments number</string>
    <string name="px_error_title">Oops! Something went wrong</string>
    <string name="px_standard_error_message">We are going to fix it. Try later.</string>
    <string name="px_error_message_email_required">Email is required</string>
    <string name="px_error_message_missing_public_key">Public key is required</string>
    <string name="px_error_message_missing_amount">Amount is required</string>
    <string name="px_error_message_missing_site">Site is required</string>
    <string name="px_error_message_missing_payer_cost">No installments found</string>
    <string name="px_error_message_missing_installment_for_issuer">No installments found for this issuer</string>
    <string name="px_error_message_multiple_installments_for_issuer">Multiple installments have been found for this issuer</string>
    <string name="px_error_message_missing_identification_types">No identification type found</string>
    <string name="px_error_message_missing_setting_for_bin">No setting found for that bin</string>
    <string name="px_empty_card_expiration_month">The month of the card\'s expiration date is not entered</string>
    <string name="px_empty_card_expiration_year">The year of the card\'s expiration date is not entered</string>
    <string name="px_empty_card_holder_name">The card holder name is not entered</string>
    <string name="px_empty_document_number">The card holder document number is not entered</string>
    <string name="px_empty_document_type">The card holder document type is not entered</string>
    <string name="px_invalid_payment_type_id">Invalid payment method type</string>
    <string name="px_invalid_card_expiration_month">Invalid card expiration month</string>
    <string name="px_invalid_card_expiration_year">Invalid card expiration year</string>
    <string name="px_invalid_payer_email">Invalid customer email</string>
    <string name="px_customer_not_allowed_to_operate">You are not allowed to operate</string>
    <string name="px_exit_label">Exit</string>
    <string name="px_input_button_back">Previous</string>
    <string name="px_input_button_next">Continue</string>
    <string name="px_refresh_message">Retry</string>
</resources>