<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/px_white"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/mpsdkScrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/px_white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/mpsdkSecurityCodeActivityBackground"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:background="@color/px_background">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/mpsdkToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/px_background"
                    android:theme="@style/ToolbarTheme"
                    app:popupTheme="@style/Theme.MercadoPagoTheme.NoActionBar">

                </android.support.v7.widget.Toolbar>

                <com.mercadopago.android.px.customviews.MPTextView
                    android:id="@+id/mpsdkTimerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/px_title_toolbar"
                    android:gravity="center_vertical"
                    android:textColor="@color/px_toolbar_text"
                    android:textSize="17dp"
                    android:visibility="gone"
                    app:font_style="mono_regular"/>

                <FrameLayout
                    android:id="@+id/mpsdkCardViewContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/px_white"
                android:orientation="vertical"
                android:paddingEnd="25dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingStart="25dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/mpsdkCardSecurityCodeContainer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:orientation="vertical"
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:visibility="visible">

                        <com.mercadopago.android.px.customviews.MPTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/px_security_code"
                            android:textColor="@color/px_color_new_card_text"
                            android:textSize="14dp"/>

                        <com.mercadopago.android.px.customviews.MPEditText
                            android:id="@+id/mpsdkCardSecurityCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="4"
                            android:singleLine="true"
                            android:textColor="@color/px_real_black"
                            android:textCursorDrawable="@drawable/px_cursor_input"
                            android:textSize="19dp"
                            app:backgroundTint="@color/px_input"
                            custom:errorColor="@color/px_color_red_error"/>

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/mpsdkSecurityCodeCardIcon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:visibility="visible"/>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/px_white">

                <LinearLayout
                    android:id="@+id/mpsdkButtonContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:visibility="visible"
                    android:weightSum="1">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.5">

                        <FrameLayout
                            android:id="@+id/mpsdkBackButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/px_form_input_button"
                            android:focusable="true">

                            <com.mercadopago.android.px.customviews.MPTextView
                                android:id="@+id/mpsdkBackButtonText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/px_input_button_back"
                                android:textColor="@color/px_active_button"/>
                        </FrameLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/mpsdkNextButton"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/px_form_input_button"
                        android:focusable="true">

                        <com.mercadopago.android.px.customviews.MPTextView
                            android:id="@+id/mpsdkNextButtonText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/px_input_button_next"
                            android:textColor="@color/px_active_button"/>
                    </FrameLayout>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/mpsdkErrorContainer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@color/px_very_light_gray"
                    android:visibility="gone">

                    <com.mercadopago.android.px.customviews.MPTextView
                        android:id="@+id/mpsdkErrorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/px_color_red_error"
                        android:textSize="14sp"/>
                </FrameLayout>

                <include layout="@layout/px_view_progress_bar_small"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
